# label-propagation

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  graph.cc  graph.cpp  graph.h  label_propagation.cpp  lprop.cc  lprop.h  readme.md  utils.cc  utils.h
dat/sample_data6/: sample.label  sample.label~
dat/sample_data7/: sample.in  sample.ret
sample_data/: sample.in  sample.label  sample.name
sample_data2/: sample.in  sample.label
sample_data6/: sample.in  sample.in~  sample.ret
sample_data7/: sample.in  sample.label
src/: Makefile.am  Makefile.in  graph.cc  lprop.cc  lprop.h  main.cc
